fixed grid not showing issue by correct the stylesheet link

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,40 @@
-.wrapper {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(3, 100px);
-    gap: 1em;
-    grid-template-areas:
-    "about menu menu booking booking login"
-    "about blog event event event login"
-    "about blog benefit benefit benefit benefit";
+@media only screen and (max-width: 1000px) {
+  .wrapper {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-auto-rows: minmax(100px, auto);
+      gap: 1em;
+      grid-template-areas:
+        "about menu menu booking booking login"
+        "about blog event event event login"
+        "about blog benefit benefit benefit benefit";
+      margin: 2em;
+    }
   }
+
+  @media only screen and (max-width: 600px)  {
+    .wrapper {  
+      grid-template-columns: repeat(4, 1fr);
+      grid-auto-rows: minmax(100px, auto);
+      grid-template-areas:
+      "about menu menu menu"
+      "about booking booking booking"
+      "about event event event"
+      "blog blog benefit benefit";
+    }
+    }
+  
+  @media only screen and (max-width: 900px)   {
+    .wrapper {  
+      grid-template-columns: repeat(4, 1fr);
+      grid-auto-rows: minmax(100px, auto);
+      grid-template-areas:
+      "about menu menu login"
+      "about booking booking booking"
+      "event event blog blog"
+      "event event benefit benefit";
+    }
+    }
 
   .button {
     display: block;
@@ -29,32 +56,57 @@
 
 
 
-.about {
-    grid-area: About;
-    background-color: rgb(246, 182, 115) ;
+
+
+  .about {
+    grid-area: about;
+    background-color: rgb(247, 217, 186) ;
   }
 .menu {
     grid-area: menu;
-    background-color:lightcoral ;
+    background-color:rgb(248, 194, 194) ;
   }
 .booking {
     grid-area: booking;
-    background-color:lightgreen ;
+    background-color:rgb(198, 245, 198) ;
   }
 .login {
     grid-area: login;
-    background-color: rgb(237, 152, 237);
+    background-color: rgb(244, 205, 244);
   }
 .event {
     grid-area: event;
-    background-color:rgb(243, 243, 149) ;
+    background-color:rgb(244, 244, 206) ;
   }
 .blog {
     grid-area: blog;
-    background-color:lightskyblue ;
+    background-color:rgb(193, 227, 248) ;
   }
 .benefit {
     grid-area: benefit;
-    background-color:rgb(184, 180, 180) ;
+    background-color:rgb(234, 230, 250) ;
   }
+  
+
+/* .about {
+    grid-area: about;    
+  }
+.menu {
+    grid-area: menu;    
+  }
+.booking {
+    grid-area: booking;    
+  }
+.login {
+    grid-area: login;    
+  }
+.event {
+    grid-area: event;    
+  }
+.blog {
+    grid-area: blog;    
+  }
+.benefit {
+    grid-area: benefit;   
+  } */
   
